# dummy

./: .gitignore  MANIFEST.in  makefile  setup.cfg  setup.py
.github/workflows/: new-wheels.yml  python-package.yml  wheels.yml
src/dummy/: README.txt  __init__.py  _code.pyx  _svec_smat.pxd  _svec_smat.pyx  pyproject.toml
tests/: test_dummy.py  test_svec.py
