[metadata]
name = dummy
version = 0.1
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/dummy
description = Dummy repository
long_description = file: README.rst

[options]
zip_safe = False
packages =
    dummy
package_dir = 
    = src
python_requires = >=2.7
install_requires = 
    numpy>=1.16
    importlib-metadata; python_version<'3.8'
include_package_data = True
