[metadata]
name = dummy
version = 0.4
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/dummy
description = Dummy repository
long_description = file: README.rst

[options]
zip_safe = False
packages =
    dummy
package_dir = 
    = src
python_requires = >=3.10
install_requires = 
    numpy>=1.26
include_package_data = True
